# videomancer-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  build.sh  build_programs.sh  build_sdk.sh  clean.sh  clean_programs.sh  clean_sdk.sh  setup.sh  setup_ed25519_signing.sh
.github/: README.md  markdown-link-check-config.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: abi-format.md  ed25519-signing.md  package-signing-guide.md  program-development-guide.md  signing-guide.md  toml-config-guide.md  toml-program-config-guide.md  vmprog-ed25519-signing.md  vmprog-format.md
docs/schemas/: vmprog_program_config_schema_v1_0.json
examples/templates/: template.toml
fpga/: Makefile
fpga/common/rtl/core_config/: hd_analog_pkg.vhd
fpga/common/rtl/dsp/: proc_amp.vhd
fpga/common/rtl/utils/: sync_slv.vhd
fpga/common/rtl/video_stream/: video_stream_pkg.vhd  yuv422_20b_to_yuv444_30b.vhd  yuv444_30b_blanking.vhd  yuv444_30b_to_yuv422_20b.vhd
fpga/common/rtl/video_sync/: video_field_detector.vhd  video_sync_generator.vhd  video_sync_pkg.vhd
fpga/common/rtl/video_timing/: video_timing_pkg.vhd
fpga/constraints/videomancer_core_rev_a/: pin_map.pcf
fpga/constraints/videomancer_core_rev_b/: io_timing.sdc  pin_map.pcf
fpga/core/yuv422_20b/rtl/: core_top.vhd  program_top.vhd  yuv422_20b_top.vhd
fpga/core/yuv444_30b/rtl/: core_pkg.vhd  core_top.vhd  program_top.vhd  yuv444_30b_top.vhd
fpga/hardware/rev_a/config/: hardware.toml
fpga/hardware/rev_a/constraints/: pin_map.pcf
fpga/hardware/rev_b/config/: hardware.toml
fpga/hardware/rev_b/constraints/: pin_map.pcf
fpga/hardware/rev_b/rtl/: hardware_top.vhd
fpga/hardware/videomancer_core_reva/config/: hardware.toml
fpga/hardware/videomancer_core_reva/constraints/: io_timing.sdc
fpga/hardware/videomancer_core_reva/rtl/: hardware_top.vhd
fpga/hardware/videomancer_core_revb/config/: hardware.toml
fpga/platform/ice40/rtl/: sd_video_clk_pll_2x.vhd
fpga/rtl/: blanking_yuv444.vhd  core.vhd  core_pkg.vhd  program_yuv444.vhd  spi_peripheral.vhd  sync_slv.vhd  top.vhd  video_field_detector.vhd  video_sync_generator.vhd  video_timing_pkg.vhd  yuv422_to_yuv444.vhd  yuv444_to_yuv422.vhd
fpga/rtl/config/: hd_analog_pkg.vhd  hd_dual_pkg.vhd  hd_hdmi_pkg.vhd  sd_analog_pkg.vhd  sd_dual_pkg.vhd  sd_hdmi_pkg.vhd
keys/: README.md
programs/passthru/: passthru.py  passthru.toml  passthru.vhd
programs/yuv_amplifier/: interpolator.vhd  multiplier.vhd  proc_amp.vhd  yuv_amplifier.toml  yuv_amplifier.vhd
scripts/: clean_trailing_whitespace.sh  setup.sh  setup_ed25519_signing.sh
scripts/gen_project_version/: project_version.hpp.in
scripts/internal/videomancer_sdk_version/: videomancer_sdk_version.hpp.in
scripts/toml_schema_validator/: README.md
scripts/toml_to_config_binary/: example_program_config.toml  test_conversion.sh  test_converter.py  toml_to_config_binary.py
scripts/vmprog_pack/: README.md  SIGNING_GUIDE.md  generate_ed25519_keys.py  vmprog_pack.py
src/: CMakeLists.txt
src/lzx/sdk/: project_version.hpp  videomancer_sdk_version.hpp  vmprog_format.hpp  vmprog_public_keys.hpp
src/lzx/videomancer/: .gitignore  videomancer_abi.hpp  videomancer_fpga.hpp  videomancer_fpga_controller.hpp  vmprog_crypto.hpp  vmprog_format.hpp  vmprog_parameter_utils.hpp  vmprog_parameter_utils.hpp.backup  vmprog_public_keys.hpp  vmprog_stream.hpp  vmprog_stream_reader.hpp
tests/: .gitignore  COVERAGE.md  README.md  run_tests.sh  test_ed25519_signing.py  test_vmprog_pack.sh
tests/cpp/: CMakeLists.txt  test_videomancer_abi.cpp  test_videomancer_fpga_controller.cpp  test_videomancer_sdk_version.cpp  test_vmprog_crypto.cpp  test_vmprog_format.cpp  test_vmprog_parameter_utils.cpp  test_vmprog_public_keys.cpp  test_vmprog_stream_reader.cpp
tests/python/: test_converter.py  test_ed25519_signing.py
tests/shell/: test_conversion.sh  test_vmprog_pack.sh
tests/vhdl/: INTEGRATION_SUMMARY.md  README.md  requirements.txt  run.py  setup.sh  tb_blanking_yuv444.vhd  tb_spi_peripheral.vhd  tb_sync_slv.vhd  tb_video_field_detector.vhd  tb_video_sync_generator.vhd  tb_yuv422_to_yuv444.vhd  tb_yuv444_to_yuv422.vhd
tests/vhdl/vunit_out/ghdl/libraries/rtl_lib/: rtl_lib-obj08.cf
tests/vhdl/vunit_out/project_database/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  (+126 more)
tests/vhdl/vunit_out/test_output/: test_name_to_path_mapping.txt
tests/vhdl/vunit_out/test_output/test_lib.tb_blanking_yuv444.test_active_video_passthrough_16d07e5fbce1bc8ecd7c2e9f5422c6e262a67dc8/: output.txt  output_with_color.txt  vunit_results
tools/binary-to-header/: README.md  binary-to-header.py  header.template  source.template
tools/toml-converter/: .gitignore  README.md  toml_to_config_binary.py
tools/toml-editor/: README.md  toml-editor.html  toml-editor.html:Zone.Identifier
tools/toml-validator/: README.md  toml_schema_validator.py
tools/vmprog-packer/: README.md  generate_ed25519_keys.py  vmprog_pack.py
(+115 files in other folders)
